arreglado sistema de ranking e implementacion del cronometro

--- a/front/angular.json
+++ b/front/angular.json
@@ -29,7 +29,9 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/easytimer.js/dist/easytimer.min.js"
+            ]
           },
           "configurations": {
             "production": {
